intTests/test_type_errors/err008.log.good
Loading file "err008.saw"
Type errors:
  err008.saw:3:1-3:23: Monadic bind with the wrong monad; found LLVMSetup but expected TopLevel
  err008.saw:3:1-3:23: This creates the action but does not execute it; if you meant to do that, prefix the expression with return

FAILED
