intTests/test_type_errors/err008.saw
// This was allowed prior to Dec 2024 and is currently a warning;
// should eventually become an error.
llvm_assert {{ True }};
